--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Título de la página</title>
+    <script type="text/javascript" src="script.js"></script>
 </head>
 
 <body>
