--- a/index.html
+++ b/index.html
@@ -4,18 +4,27 @@
 <head>
     <meta charset="utf-8">
     <title>Título de la página</title>
-    <script type="text/javascript" src="script.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="StyleSheet" href="css/style.css" type="text/css" media="screen">
 </head>
 
 <body>
-    <img src="inove.jpg" height="275px" alt="inovelogo" />
-    <input type="submit" value="Presione aquí">
+    <img src="img/inove.jpg" height="275px" alt="inovelogo"/>
+    <div>
+        <input type="submit" value="Presione aquí">
+    </div>
     <h1>Este es el título de la página</h1>
     <h2>Este es el subtítulo de la página</h2>
     <p>Este es un párrafo cualquiera</p>
     <li>Esta es una lista desordenada</li>
     <li>Esta es una lista desordenada</li>
     <li>Esta es una lista desordenada</li>
+
+    <!-- Al final del body importamos nuestros archivos js -->
+    <script>
+        console.log("Hola Mundo JS desde index.html");
+    </script>
+    <script type="text/javascript" src="js/app.js"></script>
 </body>
 
 </html>
