Cambiar carpeta images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <img src="img/inove.jpg" height="275px" alt="inovelogo"/>
+    <img src="images/inove.jpg" height="275px" alt="inovelogo"/>
     <div>
         <input type="submit" value="Presione aquí">
     </div>
